// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserStructure should render correctly when add member modal is open 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c6 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 315px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c9 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c15 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c15:hover {
  background-color: #212121;
}

.c16 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c16:hover {
  background-color: #f44336;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c17 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c13 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c18 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c14 {
  color: #0421b1;
  max-width: 190px;
}

.c19 {
  color: #212121;
  max-width: 190px;
}

.c20 {
  font-weight: normal;
  font-size: 32px;
  line-height: 40px;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-top: 8px;
}

.c21 {
  background: #2d9cdb;
  border-radius: 12px;
  padding: 16px;
  margin-top: 15px;
  font-style: normal;
  font-size: 16px;
  line-height: 20px;
  color: #ffffff;
  margin-bottom: 15px;
}

.c5 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #212121;
  padding: 16px;
}

.c2 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #e55039;
  padding: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="star-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes favoris
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="file-add-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes fiches
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="a"
        className="icon-traduction"
        src={Object {}}
      />
      Toolbar.Mes traductions
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="person-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mon profil
    </div>
    <div
      className="c2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="log-out-outline"
          data-eva-fill="#e55039"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Déconnexion
    </div>
  </div>
  <div
    className="c3 structure-detail"
  >
    <div
      className="c4"
    >
      <img
        alt="ACRO"
        className="sponsor-img"
        src={Object {}}
      />
      <div
        className="c5"
      >
        structureTest
      </div>
      <a
        aria-current={null}
        className="figma-btn dark "
        href="/annuaire-create"
        onClick={[Function]}
      >
        <span
          className="mr-10"
        >
          <i
            data-eva="book-outline"
            data-eva-fill="#fff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        Modifier dans l'annuaire
      </a>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            Membres
          </div>
          <div
            className="c10"
          >
            2
          </div>
          <div
            className="c9"
          >
            
          </div>
        </div>
        <div>
          <button
            className="figma-btn dark "
            onClick={[Function]}
            testID="test-add-member"
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="person-add-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Ajouter un membre
          </button>
        </div>
      </div>
      <div
        className="table-responsive"
      >
        <table
          className="table table-borderless"
        >
          <thead>
            <tr>
              <th>
                Nom
              </th>
              <th>
                Role
              </th>
              <th>
                Dernière connexion
              </th>
              <th>
                Ajouté le
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  <img
                    className="user-img mr-8"
                    src={Object {}}
                  />
                  <div
                    className="c12"
                  >
                    membre2
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c13"
                >
                  Responsable
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c14"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c14"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c15"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c16"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  <img
                    className="user-img mr-8"
                    src={Object {}}
                  />
                  <div
                    className="c17"
                  >
                    membre1
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c18"
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c19"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c19"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c15"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c16"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div
        className="c20"
      >
        Ajouter un membre
      </div>
      <div
        className="c21"
      >
        <b>
          Attention :
        </b>
         assurez-vous que la personne que vous souhaitez ajouter a déjà créé un compte sur réfugiés.info.
      </div>
      <div>
        <div
          className="mb-10 figma-input-group input-group"
        >
          <input
            autoFocus={true}
            className="  new-size form-control"
            id="value"
            onChange={[Function]}
            type="text"
            value=""
          />
          <div
            className="icon-append input-group-append"
          >
            <span>
              <i
                data-eva="search-outline"
                data-eva-fill="#212121"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
          </div>
        </div>
        
      </div>
      <div
        className="c22"
      >
        <button
          className="figma-btn outline-black mr-8"
          onClick={[Function]}
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="close-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Annuler
        </button>
        <button
          className="figma-btn validate "
          disabled={true}
          onClick={[Function]}
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="checkmark-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Ajouter
        </button>
      </div>
    </div>
    <div />
  </div>
</div>
`;

exports[`UserStructure should render correctly when edit member modal is open, select respo and validate 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c6 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 315px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c9 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c15 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c15:hover {
  background-color: #212121;
}

.c16 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c16:hover {
  background-color: #f44336;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c17 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c13 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c18 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c14 {
  color: #0421b1;
  max-width: 190px;
}

.c19 {
  color: #212121;
  max-width: 190px;
}

.c23 {
  background: #E0E0E0;
  border-width: 1px;
  border-style: solid;
  border-color: #212121;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 16px;
  margin: 4px 0px 4px 0px;
  cursor: pointer;
  color: #212121;
}

.c26 {
  background: #ffffff;
  border-width: 1px;
  border-style: solid;
  border-color: #212121;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 16px;
  margin: 4px 0px 4px 0px;
  cursor: pointer;
  color: #212121;
}

.c25 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-bottom: 10px;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  font-weight: normal;
  font-size: 32px;
  line-height: 40px;
  margin-right: 15px;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-top: 12px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
}

.c22 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
}

.c5 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #212121;
  padding: 16px;
}

.c2 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #e55039;
  padding: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="star-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes favoris
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="file-add-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes fiches
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="a"
        className="icon-traduction"
        src={Object {}}
      />
      Toolbar.Mes traductions
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="person-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mon profil
    </div>
    <div
      className="c2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="log-out-outline"
          data-eva-fill="#e55039"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Déconnexion
    </div>
  </div>
  <div
    className="c3 structure-detail"
  >
    <div
      className="c4"
    >
      <img
        alt="ACRO"
        className="sponsor-img"
        src={Object {}}
      />
      <div
        className="c5"
      >
        structureTest
      </div>
      <a
        aria-current={null}
        className="figma-btn dark "
        href="/annuaire-create"
        onClick={[Function]}
      >
        <span
          className="mr-10"
        >
          <i
            data-eva="book-outline"
            data-eva-fill="#fff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        Modifier dans l'annuaire
      </a>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            Membres
          </div>
          <div
            className="c10"
          >
            2
          </div>
          <div
            className="c9"
          >
            
          </div>
        </div>
        <div>
          <button
            className="figma-btn dark "
            onClick={[Function]}
            testID="test-add-member"
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="person-add-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Ajouter un membre
          </button>
        </div>
      </div>
      <div
        className="table-responsive"
      >
        <table
          className="table table-borderless"
        >
          <thead>
            <tr>
              <th>
                Nom
              </th>
              <th>
                Role
              </th>
              <th>
                Dernière connexion
              </th>
              <th>
                Ajouté le
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  <img
                    className="user-img mr-8"
                    src={Object {}}
                  />
                  <div
                    className="c12"
                  >
                    membre2
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c13"
                >
                  Responsable
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c14"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c14"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c15"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c16"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  <img
                    className="user-img mr-8"
                    src={Object {}}
                  />
                  <div
                    className="c17"
                  >
                    membre1
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c18"
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c19"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c19"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c15"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c16"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div />
    <div>
      <div
        className="c20"
      >
        <div
          className="c21"
        >
          Modifier le rôle de
        </div>
        <img
          className="user-img mr-8"
          src={Object {}}
        />
        <div
          className="c22"
        >
          membre1
        </div>
      </div>
      <div
        className="c23"
        onClick={[Function]}
      >
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            Nommer « rédacteur » 
          </div>
          <span>
            <i
              data-eva="radio-button-on"
              data-eva-fill="#212121"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </div>
        Éditer et valider les fiches 
        <br />
        Accepter les fiches proposées à ma structure 
        <br />
        Voir les réactions aux fiches de ma structure 
        <br />
        Compléter la fiche annuaire de ma structure 
        <br />
      </div>
      <div
        className="c26"
        onClick={[Function]}
      >
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            Nommer « responsable »
          </div>
          <span>
            <i
              data-eva="radio-button-off"
              data-eva-fill="#212121"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </div>
        Éditer et valider les fiches 
        <br />
        Accepter les fiches proposées à ma structure 
        <br />
        Voir les réactions aux fiches de ma structure 
        <br />
        Compléter la fiche annuaire de ma structure 
        <br />
        <span>
          + Ajouter ou supprimer d'autres membres
          <br />
        </span>
        <span>
          + Nommer d'autres responsables
          <br />
        </span>
      </div>
      <div
        className="c27"
      >
        <button
          className="figma-btn outline-black mr-8"
          onClick={[Function]}
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="close-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Annuler
        </button>
        <button
          className="figma-btn validate "
          disabled={true}
          onClick={[Function]}
          testID="test-validate-edit"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="checkmark-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Valider
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserStructure should render correctly when edit member modal is open, select respo and validate 2`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c6 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 315px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c9 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c15 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c15:hover {
  background-color: #212121;
}

.c16 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c16:hover {
  background-color: #f44336;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c17 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c13 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c18 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c14 {
  color: #0421b1;
  max-width: 190px;
}

.c19 {
  color: #212121;
  max-width: 190px;
}

.c23 {
  background: #ffffff;
  border-width: 1px;
  border-style: solid;
  border-color: #212121;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 16px;
  margin: 4px 0px 4px 0px;
  cursor: pointer;
  color: #212121;
}

.c26 {
  background: #2d9cdb;
  border-width: 1px;
  border-style: solid;
  border-color: #2d9cdb;
  box-sizing: border-box;
  border-radius: 12px;
  padding: 16px;
  margin: 4px 0px 4px 0px;
  cursor: pointer;
  color: #ffffff;
}

.c25 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-bottom: 10px;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c21 {
  font-weight: normal;
  font-size: 32px;
  line-height: 40px;
  margin-right: 15px;
}

.c27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  margin-top: 12px;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 16px;
}

.c22 {
  font-weight: bold;
  font-size: 18px;
  line-height: 23px;
}

.c5 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #212121;
  padding: 16px;
}

.c2 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #e55039;
  padding: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="star-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes favoris
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="file-add-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes fiches
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="a"
        className="icon-traduction"
        src={Object {}}
      />
      Toolbar.Mes traductions
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="person-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mon profil
    </div>
    <div
      className="c2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="log-out-outline"
          data-eva-fill="#e55039"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Déconnexion
    </div>
  </div>
  <div
    className="c3 structure-detail"
  >
    <div
      className="c4"
    >
      <img
        alt="ACRO"
        className="sponsor-img"
        src={Object {}}
      />
      <div
        className="c5"
      >
        structureTest
      </div>
      <a
        aria-current={null}
        className="figma-btn dark "
        href="/annuaire-create"
        onClick={[Function]}
      >
        <span
          className="mr-10"
        >
          <i
            data-eva="book-outline"
            data-eva-fill="#fff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        Modifier dans l'annuaire
      </a>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            Membres
          </div>
          <div
            className="c10"
          >
            2
          </div>
          <div
            className="c9"
          >
            
          </div>
        </div>
        <div>
          <button
            className="figma-btn dark "
            onClick={[Function]}
            testID="test-add-member"
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="person-add-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Ajouter un membre
          </button>
        </div>
      </div>
      <div
        className="table-responsive"
      >
        <table
          className="table table-borderless"
        >
          <thead>
            <tr>
              <th>
                Nom
              </th>
              <th>
                Role
              </th>
              <th>
                Dernière connexion
              </th>
              <th>
                Ajouté le
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  <img
                    className="user-img mr-8"
                    src={Object {}}
                  />
                  <div
                    className="c12"
                  >
                    membre2
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c13"
                >
                  Responsable
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c14"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c14"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c15"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c16"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  <img
                    className="user-img mr-8"
                    src={Object {}}
                  />
                  <div
                    className="c17"
                  >
                    membre1
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c18"
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c19"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c19"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c15"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c16"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div />
    <div>
      <div
        className="c20"
      >
        <div
          className="c21"
        >
          Modifier le rôle de
        </div>
        <img
          className="user-img mr-8"
          src={Object {}}
        />
        <div
          className="c22"
        >
          membre1
        </div>
      </div>
      <div
        className="c23"
        onClick={[Function]}
      >
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            Nommer « rédacteur » 
          </div>
          <span>
            <i
              data-eva="radio-button-off"
              data-eva-fill="#212121"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </div>
        Éditer et valider les fiches 
        <br />
        Accepter les fiches proposées à ma structure 
        <br />
        Voir les réactions aux fiches de ma structure 
        <br />
        Compléter la fiche annuaire de ma structure 
        <br />
      </div>
      <div
        className="c26"
        onClick={[Function]}
      >
        <div
          className="c24"
        >
          <div
            className="c25"
          >
            Nommer « responsable »
          </div>
          <span>
            <i
              data-eva="radio-button-on"
              data-eva-fill="#ffffff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
        </div>
        Éditer et valider les fiches 
        <br />
        Accepter les fiches proposées à ma structure 
        <br />
        Voir les réactions aux fiches de ma structure 
        <br />
        Compléter la fiche annuaire de ma structure 
        <br />
        <span>
          + Ajouter ou supprimer d'autres membres
          <br />
        </span>
        <span>
          + Nommer d'autres responsables
          <br />
        </span>
      </div>
      <div
        className="c27"
      >
        <button
          className="figma-btn outline-black mr-8"
          onClick={[Function]}
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="close-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Annuler
        </button>
        <button
          className="figma-btn validate "
          disabled={false}
          onClick={[Function]}
          testID="test-validate-edit"
        >
          <span
            className="mr-10"
          >
            <i
              data-eva="checkmark-outline"
              data-eva-fill="#fff"
              data-eva-height="20px"
              data-eva-width="20px"
            />
          </span>
          Valider
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserStructure should render correctly when loading 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c6 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 315px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c9 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c8 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c5 {
  width: 160px;
  height: 160px;
  background-color: #ffffff;
  margin-bottom: 8px;
}

.c1 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #212121;
  padding: 16px;
}

.c2 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #e55039;
  padding: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="star-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes favoris
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="file-add-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes fiches
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="a"
        className="icon-traduction"
        src={Object {}}
      />
      Toolbar.Mes traductions
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="person-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mon profil
    </div>
    <div
      className="c2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="log-out-outline"
          data-eva-fill="#e55039"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Déconnexion
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      />
      <div
        className="css-nitgap-SkeletonTheme"
      >
        <span>
          <span
            className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 20,
                "width": 160,
              }
            }
          >
            ‌
          </span>
        </span>
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          Membres
        </div>
        <div
          className="c9"
        >
          ...
        </div>
        <div
          className="c8"
        >
          
        </div>
      </div>
      <div
        className="css-nitgap-SkeletonTheme"
      >
        <span>
          <span
            className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 50,
                "width": 700,
              }
            }
          >
            ‌
          </span>
        </span>
      </div>
      <div
        className="css-nitgap-SkeletonTheme"
      >
        <span>
          <span
            className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 50,
                "width": 700,
              }
            }
          >
            ‌
          </span>
        </span>
      </div>
      <div
        className="css-nitgap-SkeletonTheme"
      >
        <span>
          <span
            className="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
            style={
              Object {
                "height": 50,
                "width": 700,
              }
            }
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserStructure should render correctly when no structure 1`] = `
.c1 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #212121;
  padding: 16px;
}

.c2 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #e55039;
  padding: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3 {
  margin-top: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  color: #f44336;
  margin-top: 60px;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="star-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes favoris
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="file-add-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes fiches
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="a"
        className="icon-traduction"
        src={Object {}}
      />
      Toolbar.Mes traductions
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="person-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mon profil
    </div>
    <div
      className="c2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="log-out-outline"
          data-eva-fill="#e55039"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Déconnexion
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
    >
      Une erreur est survenue. Veuillez recharger la page ou contacter l'équipe de réfugiés.info via le live chat en bas à droite de votre écran.
    </div>
  </div>
</div>
`;

exports[`UserStructure should render correctly when structure with membres when user is redacteur 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c6 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 315px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c9 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c15 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c13 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c16 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c14 {
  color: #0421b1;
  max-width: 190px;
}

.c17 {
  color: #212121;
  max-width: 190px;
}

.c5 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #212121;
  padding: 16px;
}

.c2 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #e55039;
  padding: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="star-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes favoris
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="file-add-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes fiches
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="a"
        className="icon-traduction"
        src={Object {}}
      />
      Toolbar.Mes traductions
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="person-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mon profil
    </div>
    <div
      className="c2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="log-out-outline"
          data-eva-fill="#e55039"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Déconnexion
    </div>
  </div>
  <div
    className="c3 structure-detail"
  >
    <div
      className="c4"
    >
      <img
        alt="ACRO"
        className="sponsor-img"
        src={Object {}}
      />
      <div
        className="c5"
      >
        structureTest
      </div>
      <a
        aria-current={null}
        className="figma-btn dark "
        href="/annuaire-create"
        onClick={[Function]}
      >
        <span
          className="mr-10"
        >
          <i
            data-eva="book-outline"
            data-eva-fill="#fff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        Modifier dans l'annuaire
      </a>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            Membres
          </div>
          <div
            className="c10"
          >
            2
          </div>
          <div
            className="c9"
          >
            
          </div>
        </div>
      </div>
      <div
        className="table-responsive"
      >
        <table
          className="table table-borderless"
        >
          <thead>
            <tr>
              <th>
                Nom
              </th>
              <th>
                Role
              </th>
              <th>
                Dernière connexion
              </th>
              <th>
                Ajouté le
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  <img
                    className="user-img mr-8"
                    src={Object {}}
                  />
                  <div
                    className="c12"
                  >
                    membre1
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c13"
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c14"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c14"
                >
                  Non disponible
                </div>
              </td>
            </tr>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  <img
                    className="user-img mr-8"
                    src={Object {}}
                  />
                  <div
                    className="c15"
                  >
                    membre2
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c16"
                >
                  Responsable
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c17"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c17"
                >
                  Non disponible
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserStructure should render correctly when structure with membres when user is respo 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-top: 26px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  margin-bottom: 42px;
}

.c6 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  background: #edebeb;
  border-radius: 12px;
  padding: 40px;
  margin: 0px 20px 0px 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 315px;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-bottom: 32px;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c10 {
  background: #212121;
  border-radius: 12px;
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  color: #ffffff;
  padding: 8px 19px 8px 19px;
  margin: 0px 8px 0px 8px;
}

.c9 {
  font-weight: bold;
  font-size: 28px;
  line-height: 35px;
  margin-bottom: 8px;
}

.c15 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c15:hover {
  background-color: #212121;
}

.c16 {
  width: 40px;
  height: 40px;
  background-color: #828282;
  border-radius: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4px;
  margin-left: 4px;
  cursor: pointer;
}

.c16:hover {
  background-color: #f44336;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
}

.c17 {
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
}

.c13 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #0421b1;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c18 {
  background: #ffffff;
  border-radius: 8px;
  padding: 8px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #212121;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c14 {
  color: #0421b1;
  max-width: 190px;
}

.c19 {
  color: #212121;
  max-width: 190px;
}

.c5 {
  font-weight: bold;
  font-size: 22px;
  line-height: 28px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c1 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #212121;
  padding: 16px;
}

.c2 {
  background: #ffffff;
  border-radius: 12px;
  margin: 0px 5px 0px 5px;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  cursor: pointer;
  color: #e55039;
  padding: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  style={
    Object {
      "display": "flex",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="star-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes favoris
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="file-add-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mes fiches
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <img
        alt="a"
        className="icon-traduction"
        src={Object {}}
      />
      Toolbar.Mes traductions
    </div>
    <div
      className="c1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="person-outline"
          data-eva-fill="#212121"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Mon profil
    </div>
    <div
      className="c2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="mr-10"
      >
        <i
          data-eva="log-out-outline"
          data-eva-fill="#e55039"
          data-eva-height="20px"
          data-eva-width="20px"
        />
      </span>
      Toolbar.Déconnexion
    </div>
  </div>
  <div
    className="c3 structure-detail"
  >
    <div
      className="c4"
    >
      <img
        alt="ACRO"
        className="sponsor-img"
        src={Object {}}
      />
      <div
        className="c5"
      >
        structureTest
      </div>
      <a
        aria-current={null}
        className="figma-btn dark "
        href="/annuaire-create"
        onClick={[Function]}
      >
        <span
          className="mr-10"
        >
          <i
            data-eva="book-outline"
            data-eva-fill="#fff"
            data-eva-height="20px"
            data-eva-width="20px"
          />
        </span>
        Modifier dans l'annuaire
      </a>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <div
            className="c9"
          >
            Membres
          </div>
          <div
            className="c10"
          >
            2
          </div>
          <div
            className="c9"
          >
            
          </div>
        </div>
        <div>
          <button
            className="figma-btn dark "
            onClick={[Function]}
            testID="test-add-member"
          >
            <span
              className="mr-10"
            >
              <i
                data-eva="person-add-outline"
                data-eva-fill="#fff"
                data-eva-height="20px"
                data-eva-width="20px"
              />
            </span>
            Ajouter un membre
          </button>
        </div>
      </div>
      <div
        className="table-responsive"
      >
        <table
          className="table table-borderless"
        >
          <thead>
            <tr>
              <th>
                Nom
              </th>
              <th>
                Role
              </th>
              <th>
                Dernière connexion
              </th>
              <th>
                Ajouté le
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  <img
                    className="user-img mr-8"
                    src={Object {}}
                  />
                  <div
                    className="c12"
                  >
                    membre2
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c13"
                >
                  Responsable
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c14"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c14"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c15"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c16"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
            <tr
              className="membres-table"
            >
              <td
                className="align-middle"
              >
                <div
                  className="c11"
                >
                  <img
                    className="user-img mr-8"
                    src={Object {}}
                  />
                  <div
                    className="c17"
                  >
                    membre1
                  </div>
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c18"
                >
                  Rédacteur
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c19"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  className="c19"
                >
                  Non disponible
                </div>
              </td>
              <td
                className="align-middle"
              >
                <div
                  style={
                    Object {
                      "display": "flex",
                      "flexDirection": "row",
                    }
                  }
                >
                  <div
                    className="c15"
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="edit"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                  <div
                    className="c16"
                    disabled={false}
                    onClick={[Function]}
                  >
                    <div
                      style={
                        Object {
                          "marginBottom": "4px",
                        }
                      }
                    >
                      <span>
                        <i
                          data-eva="trash"
                          data-eva-fill="#ffffff"
                          data-eva-height="20px"
                          data-eva-width="20px"
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div />
    <div />
  </div>
</div>
`;
